courses/430_programming-languages/assignment-4/tests/error/error26.sml
val prog = PROGRAM {decls=[],stmts=[ST_EXP {exp=EXP_ID "a"}]} : program
;
